objects/SAI_Status_Tracking__c.object
<CustomObject>
    <description>Tracking the SAI Status field changes</description>
    <label>SAI Status Tracking</label>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>SAI Status Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAI Status Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>SAI Status Tracking</relationshipLabel>
        <relationshipName>Lead_SAI_Status_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SAI Status Tracking</relationshipLabel>
        <relationshipName>SAI_Status_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SAI_Status_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Conversion_SLA__c</fullName>
        <label>Conversion SLA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Value__c</fullName>
        <label>Previous Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispensation_SLA__c</fullName>
        <label>Dispensation SLA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_Date_Time__c</fullName>
        <label>Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Tracking_Fields__c</fullName>
        <description>Contains all status fields</description>
        <label>Status Tracking Fields</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Status_Air__c</fullName>
                    <label>Status - Air</label>
                </value>
                <value>
                    <fullName>Status_Applied_Genomics__c</fullName>
                    <label>Status - Applied Genomics</label>
                </value>
                <value>
                    <fullName>Status_Chemicals__c</fullName>
                    <label>Status - Chemicals</label>
                </value>
                <value>
                    <fullName>Status_Clinical_Studies__c</fullName>
                    <label>Status - Clinical Studies</label>
                </value>
                <value>
                    <fullName>Status_Digital_Lab__c</fullName>
                    <label>Status - Digital Lab</label>
                </value>
                <value>
                    <fullName>Status_Disease_Research__c</fullName>
                    <label>Status - Disease Research</label>
                </value>
                <value>
                    <fullName>Status_Drug_Discovery__c</fullName>
                    <label>Status - Drug Discovery</label>
                </value>
                <value>
                    <fullName>Status_Energy__c</fullName>
                    <label>Status - Energy</label>
                </value>
                <value>
                    <fullName>Status_Food_Quality__c</fullName>
                    <label>Status - Food Quality</label>
                </value>
                <value>
                    <fullName>Status_Food_Safety__c</fullName>
                    <label>Status - Food Safety</label>
                </value>
                <value>
                    <fullName>Status_Forensics_and_Security__c</fullName>
                    <label>Status - Forensics and Security</label>
                </value>
                <value>
                    <fullName>Status_Geochemistry_Mining_and_Metals__c</fullName>
                    <label>Status - Geochemistry Mining and Metals</label>
                </value>
                <value>
                    <fullName>Status_Material__c</fullName>
                    <label>Status - Material</label>
                </value>
                <value>
                    <fullName>Status_Maternal_Fetal_Health__c</fullName>
                    <label>Status - Maternal Fetal Health</label>
                </value>
                <value>
                    <fullName>Status_Newborn_Screening__c</fullName>
                    <label>Status - Newborn Screening</label>
                </value>
                <value>
                    <fullName>Status_Pre_Clinical_Studies__c</fullName>
                    <label>Status - Pre Clinical Studies</label>
                </value>
                <value>
                    <fullName>Status_QA_QC_Drug_Manufacturing_Process__c</fullName>
                    <label>Status - QA QC Drug Manufacturing Process</label>
                </value>
                <value>
                    <fullName>Status_Soil_Solids__c</fullName>
                    <label>Status - Soil Solids</label>
                </value>
                <value>
                    <fullName>Status_Strategic_Services__c</fullName>
                    <label>Status - Strategic Services</label>
                </value>
                <value>
                    <fullName>Status_Water__c</fullName>
                    <label>Status - Water</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corresponding_Opportunity__c</fullName>
        <label>Corresponding Opportunity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>